--- a/.babelrc
+++ b/.babelrc
@@ -1,29 +1,4 @@
 {
-    "plugins": [
-        [
-            "module-resolver",
-            {
-                "root": [
-                    "."
-                ],
-                "alias": {
-                    "styles": "./styles"
-                },
-                "cwd": "babelrc"
-            }
-        ],
-        [
-            "wrap-in-js",
-            {
-                "extensions": [
-                    "css$",
-                    "scss$"
-                ]
-            }
-        ]
-    ],
-    "presets": [
-        "next/babel"
-    ],
-    "ignore": []
+    "presets": ["next/babel"],
+    "plugins": []
 }
