added babel back

--- a/.babelrc
+++ b/.babelrc
@@ -1,4 +1,29 @@
 {
-    "presets": ["next/babel"],
-    "plugins": []
+    "plugins": [
+        [
+            "module-resolver",
+            {
+                "root": [
+                    "."
+                ],
+                "alias": {
+                    "styles": "./styles"
+                },
+                "cwd": "babelrc"
+            }
+        ],
+        [
+            "wrap-in-js",
+            {
+                "extensions": [
+                    "css$",
+                    "scss$"
+                ]
+            }
+        ]
+    ],
+    "presets": [
+        "next/babel"
+    ],
+    "ignore": []
 }
